# phoenix

./: CMakeLists.txt  Phoenix_schema-cache.lib  Phoenix_schema.net  Phoenix_schema.pro  Phoenix_schema_new.kicad_pcb  Phoenix_schema_new.kicad_pcb-bak  Phoenix_schema_ver3.kicad_pcb  Phoenix_schema_ver3.kicad_pcb-bak  README.md  RESOURCES.md  package.xml  snapdragon
.pretty/: SPMAJST6.kicad_mod
ELKA.pretty/: ELKA.kicad_mod  VRM.kicad_mod  elka_r_breakout_cyclo.brd
ELKA.pretty/elka_r_breakout_cyclo/: noname.kicad_pcb
ELKA_references/: Readme.md
Gerber_files/: Phoenix_schema-B.Cu.gbr  Phoenix_schema-Edge.Cuts.gbr  Phoenix_schema-F.Mask.gbr  Phoenix_schema-F.SilkS.gbr  Phoenix_schema-drl_map.ps
Gerber_files_ver2/: Phoenix_schema_new-Edge.Cuts.gbr  Phoenix_schema_new-F.SilkS.gbr
Gerber_files_ver3/: Phoenix_schema_ver3-B.SilkS.gbr  Phoenix_schema_ver3-F.Fab.gbr  Phoenix_schema_ver3-F.Paste.gbr  Phoenix_schema_ver3-F.SilkS.gbr  Phoenix_schema_ver3-NPTH-drl_map.gbr  Phoenix_schema_ver3-NPTH.drl  Phoenix_schema_ver3-PTH-drl_map.dxf  Phoenix_schema_ver3-PTH-drl_map.ps
Kicad_files/: Phoenix_schema.bak  Phoenix_schema.cmp  Phoenix_schema.kicad_pcb-bak  Phoenix_schema.sch  _autosave-Phoenix_schema_new.kicad_pcb  d,mcsdnmcbnmdsbcnm  noname.kicad_pcb  schema_version1.kicad_pcb  schematic2.kicad_pcb
Kicad_files/ELKA.pretty/: ELKA1.kicad_mod
Kicad_files/Gerber_files/: Phoenix_schema-B.Mask.gbr  Phoenix_schema-B.SilkS.gbr  Phoenix_schema-F.Cu.gbr  Phoenix_schema-drl.rpt  Phoenix_schema-drl_map.gbr  Phoenix_schema.drl
Kicad_files/Gerber_files_ver2/: Phoenix_schema_new-B.Cu.gbr  Phoenix_schema_new-B.Mask.gbr  Phoenix_schema_new-B.SilkS.gbr  Phoenix_schema_new-F.Cu.gbr  Phoenix_schema_new-F.Mask.gbr  Phoenix_schema_new-NPTH-drl_map.gbr  Phoenix_schema_new-NPTH.drl  Phoenix_schema_new-PTH-drl_map.gbr  Phoenix_schema_new-PTH.drl  Phoenix_schema_new-drl.rpt
Kicad_files/Gerber_files_ver3/: Phoenix_schema_ver3-B.Cu.gbr  (+11 more)
Libraries/: elka.lib  receiver.bak  receiver.lib
PCB_ver1.pretty/: DIP-20.kicad_mod  ELKA.kicad_mod  Pin_Header_Straight_1x05_Pitch2.00mm.kicad_mod  SPMAJST6.kicad_mod  XT30.kicad_mod
Snapdragon_References/: Readme.md
XT30.pretty/: XT30.kicad_mod
Zigbee.pretty/: DIP-20.kicad_mod  DIP-20.mod
catkin_workspace/: Makefile  catkin_make.cache  params.yaml
holes.pretty/: holes.kicad_mod  mech holes.kicad_mod
launch/: rotocrawler.launch
rescue-backup/: Phoenix_schema-2018-07-11-23-15-29.pro
rotocopter/: CMakeLists.txt
rotocrawler/: CMakeLists.txt
src/: image_subscriber.cpp
(+42 files in other folders)
